Compiladores/y.output
   0  $accept : prog $end

   1  prog : expr

   2  expr : expr '+' term
   3       | term
   4       | term '*' factor

   5  term : factor

   6  factor : NUM

state 0
	$accept : . prog $end  (0)

	NUM  shift 1
	.  error

	prog  goto 2
	expr  goto 3
	term  goto 4
	factor  goto 5


state 1
	factor : NUM .  (6)

	.  reduce 6


state 2
	$accept : prog . $end  (0)

	$end  accept


state 3
	prog : expr .  (1)
	expr : expr . '+' term  (2)

	'+'  shift 6
	$end  reduce 1


state 4
	expr : term .  (3)
	expr : term . '*' factor  (4)

	'*'  shift 7
	$end  reduce 3
	'+'  reduce 3


state 5
	term : factor .  (5)

	.  reduce 5


state 6
	expr : expr '+' . term  (2)

	NUM  shift 1
	.  error

	term  goto 8
	factor  goto 5


state 7
	expr : term '*' . factor  (4)

	NUM  shift 1
	.  error

	factor  goto 9


state 8
	expr : expr '+' term .  (2)

	.  reduce 2


state 9
	expr : term '*' factor .  (4)

	.  reduce 4


5 terminals, 5 nonterminals
7 grammar rules, 10 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  NUM
     3     43  '+'
     4     42  '*'
     5    258  $accept
     6    259  prog
     7    260  expr
     8    261  term
     9    262  factor
